# AI-Restaurant-Recommender-

./: README_Streamlit.md  README_Vercel.md  api_server.py  pyproject.toml  requirements.txt  streamlit_app.py  vercel.json
ai_restaurant_recommender.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
api/: index.py  requirements.txt
app/: main.py  phase-00-foundations.md
app/api/: recommendations.py  routes.py  schemas.py
app/core/: __init__.py  config.py  errors.py  logging.py
app/data/: __init__.py  ingestion.py  repository.py
app/domain/: __init__.py  models.py
app/services/: __init__.py  fallback.py  groq_client.py  integration.py  llm_client.py  merger.py  recommendation.py  response_parser.py
app/web/: routes.py
app/web/templates/: index.html
data/: location_unique_values.txt  zomato.parquet
docs/architecture/: README.md  phase-01-data-ingestion.md  phase-02-user-input.md  phase-03-integration-layer.md  phase-04-recommendation-engine.md  phase-05-output-display.md  phase-06-operations.md
src/ai_restaurant_recommender.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/phase_0/: __init__.py
src/phase_1/: __init__.py
src/phase_2/: __init__.py
src/phase_3/: __init__.py
src/phase_4/: __init__.py
src/phase_5/: __init__.py
src/phase_5/static/: index.html
tests/: test_domain_models.py  test_groq_flow.py  test_ingestion_and_repository.py  test_phase4_backend.py
